--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@chatscope/chat-ui-kit-react": "^1.10.1",
     "date-fns": "^2.30.0",
     "firebase": "^10.7.1",
+    "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.4",
+    "react-i18next": "^15.6.0",
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
